# cookiecutter-pypackage

./: README.rst  cookiecutter.json
{{cookiecutter.repo_name}}/: setup.cfg  setup.py
{{cookiecutter.repo_name}}/docs/: conf.py  installation.rst  usage.rst
{{cookiecutter.repo_name}}/src/{{ cookiecutter.package }}/: __init__.py  cli.py
