[metadata]
name = {{ cookiecutter.repo_name }}
author = {{ cookiecutter.full_name }}
author-email = {{ cookiecutter.email }}
summary = {{ cookiecutter.summary }}
description-file = README.rst
license = {{ cookiecutter.license }}
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
home-page = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_name }}
project-url =
    Documentation, https://{{ cookiecutter.repo_name }}.readthedocs.org
    Atom feed, https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.repo_name }}/commits/master.atom
keywords =
    setup
    distutils

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages_root = src
packages =
    {{ cookiecutter.package }}
resources =
    README.rst = {doc}

[entry_points]
; ; cli example
; console_scripts =
;     {{ cookiecutter.repo_name }} = {{ cookiecutter.repo_name }}.cli:main

[wheel]
universal = 1

[nosetests]
with-xunit = true
xunit-file = ./xunit.xml
cover-package = {{ cookiecutter.package }}
with-xcoverage = 1
xcoverage-file = ../coverage.xml
cover-html-dir = ./cover
cover-html = 1
nocapture = 1
